# dfc

./: Cargo.toml  README.md  output.txt
.github/workflows/: lockdown.yml
src/: main.rs
