[package]
name = "dfc"
version = "0.1.1"
edition = "2021"
authors = ["Alastair Campbell <alastair.campbell@runbox.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/abc/dfc/"
description = "Duplicate filename counter - a program to count the number occurances of duplicate filenames within a directory structure."
keywords = ["count", "filename", "deduplication", "duplicate", "counter"]
categories = ["command-line-utilities", "filesystem"]

[dependencies]
