[package]
name = "dfc"
version = "0.1.4"
edition = "2021"
authors = ["Alastair Campbell <ac@mpbell.io>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://codeberg.org/acampbell/dfc/"
description = "Duplicate filename counter - a program to count the number occurances of duplicate filenames within a directory structure."
keywords = ["count", "filename", "deduplication", "duplicate", "counter"]
categories = ["command-line-utilities", "filesystem"]

[dependencies]
